--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">My Application</string>
+
+    <string name="service_error_retry_button_label">재시도하기</string>
+    <string name="network_error_message">네트워크 오류나 일시적인 장애가 발생했습니다.</string>
+    <string name="unknown_error_message">알 수 없는 에러가 발생했습니다.</string>
+
+    <string name="retry">재시도</string>
+    <string name="exit">종료</string>
+    <string name="confirm">확인</string>
+
+    <string name="home_input_edit">Search</string>
+    <string name="create_title">Title</string>
+    <string name="create_body">Body</string>
+
+    <string name="home_add">할일 추가하기</string>
+    <string name="home_delete">할일 전부 삭제하기</string>
+
+    <string name="to_API_page">API 연결 페이지</string>
+
+    <string name="error_image_load">이미지 로딩중에 에러가 발생 하였습니다.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
